// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`debts.update > functionality > update amount > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "704.5100",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "amount": "-704.5100",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update amount > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "amount": "99.9000",
      },
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "-99.9000",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update amount > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "704.5100",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update amount > counterparty doesn't auto-accept > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "-99.9000",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update currency code > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "currencyCode": "AUD",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "currencyCode": "AUD",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update currency code > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "currencyCode": "MGA",
      },
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "currencyCode": "MGA",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update currency code > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "currencyCode": "AUD",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update currency code > counterparty doesn't auto-accept > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "currencyCode": "MGA",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update locked - false > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "lockedTimestamp": null,
      },
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "lockedTimestamp": null,
      },
    },
  },
}
`;

exports[`debts.update > functionality > update locked - false > counterparty auto-accepts > unlocked before update 1`] = `{}`;

exports[`debts.update > functionality > update locked - false > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "lockedTimestamp": null,
      },
    },
  },
}
`;

exports[`debts.update > functionality > update locked - false > counterparty doesn't auto-accept > unlocked before update 1`] = `{}`;

exports[`debts.update > functionality > update locked - true > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update locked - true > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update locked - true > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update locked - true > counterparty doesn't auto-accept > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple > locked as false > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "704.5100",
        "currencyCode": "TRY",
        "lockedTimestamp": null,
        "note": "cum soluta esse",
        "receiptId": "c6921060-1137-45b4-b942-59630a98b84a",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "amount": "-704.5100",
        "currencyCode": "TRY",
        "lockedTimestamp": null,
        "receiptId": "c6921060-1137-45b4-b942-59630a98b84a",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple > locked as false > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "amount": "99.9000",
        "currencyCode": "KZT",
        "receiptId": "7a95f491-5b34-488a-b337-a6222e2af061",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "-99.9000",
        "currencyCode": "KZT",
        "note": "error dignissimos aliquam",
        "receiptId": "7a95f491-5b34-488a-b337-a6222e2af061",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple > locked as false > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "704.5100",
        "currencyCode": "TRY",
        "lockedTimestamp": null,
        "note": "cum soluta esse",
        "receiptId": "c6921060-1137-45b4-b942-59630a98b84a",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple > locked as false > counterparty doesn't auto-accept > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "-99.9000",
        "currencyCode": "KZT",
        "note": "error dignissimos aliquam",
        "receiptId": "7a95f491-5b34-488a-b337-a6222e2af061",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple > locked as true > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "704.5100",
        "currencyCode": "TRY",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "cum soluta esse",
        "receiptId": "c6921060-1137-45b4-b942-59630a98b84a",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "amount": "-704.5100",
        "currencyCode": "TRY",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "receiptId": "c6921060-1137-45b4-b942-59630a98b84a",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple > locked as true > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "amount": "99.9000",
        "currencyCode": "KZT",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "receiptId": "7a95f491-5b34-488a-b337-a6222e2af061",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "-99.9000",
        "currencyCode": "KZT",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "error dignissimos aliquam",
        "receiptId": "7a95f491-5b34-488a-b337-a6222e2af061",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple > locked as true > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "704.5100",
        "currencyCode": "TRY",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "cum soluta esse",
        "receiptId": "c6921060-1137-45b4-b942-59630a98b84a",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple > locked as true > counterparty doesn't auto-accept > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "-99.9000",
        "currencyCode": "KZT",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "error dignissimos aliquam",
        "receiptId": "7a95f491-5b34-488a-b337-a6222e2af061",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple > no locked > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "704.5100",
        "currencyCode": "TRY",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "cum soluta esse",
        "receiptId": "c6921060-1137-45b4-b942-59630a98b84a",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "amount": "-704.5100",
        "currencyCode": "TRY",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "receiptId": "c6921060-1137-45b4-b942-59630a98b84a",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple > no locked > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "amount": "99.9000",
        "currencyCode": "KZT",
        "receiptId": "7a95f491-5b34-488a-b337-a6222e2af061",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "-99.9000",
        "currencyCode": "KZT",
        "note": "error dignissimos aliquam",
        "receiptId": "7a95f491-5b34-488a-b337-a6222e2af061",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple > no locked > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "704.5100",
        "currencyCode": "TRY",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "cum soluta esse",
        "receiptId": "c6921060-1137-45b4-b942-59630a98b84a",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple > no locked > counterparty doesn't auto-accept > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "-99.9000",
        "currencyCode": "KZT",
        "note": "error dignissimos aliquam",
        "receiptId": "7a95f491-5b34-488a-b337-a6222e2af061",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update note > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "note": "aperiam facilis cum",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update note > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "note": "atque architecto error",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update note > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "note": "aperiam facilis cum",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update note > counterparty doesn't auto-accept > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "note": "atque architecto error",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update receipt id > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "receiptId": "c6921060-1137-45b4-b942-59630a98b84a",
      },
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "receiptId": "c6921060-1137-45b4-b942-59630a98b84a",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update receipt id > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "receiptId": "7a95f491-5b34-488a-b337-a6222e2af061",
      },
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "receiptId": "7a95f491-5b34-488a-b337-a6222e2af061",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update receipt id > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "receiptId": "c6921060-1137-45b4-b942-59630a98b84a",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update receipt id > counterparty doesn't auto-accept > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "receiptId": "7a95f491-5b34-488a-b337-a6222e2af061",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update timestamp > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update timestamp > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update timestamp > counterparty doesn't auto-accept > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:6186ab02-5b60-41e5-ae47-bb4c747cd0f2|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update timestamp > counterparty doesn't auto-accept > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:ee5f2798-4ad6-47cb-a18c-f593cff92a37|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;
